table overflow fix 11?

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -18,11 +18,16 @@ h3 {
 /*https://developer.mozilla.org/en-US/docs/Learn_web_development/Core/Styling_basics/Tables*/
 table {
     table-layout: fixed;
+    /*table-layout: auto;*/
     /*width: 90%;*/
     margin: 10px auto;
     border-collapse: collapse;
     border-top: 1px solid #999999;
     border-bottom: 1px solid #999999;
+    /* solving overflowing tables in mobile, although it adds ugly borders over and under tables
+    https://stackoverflow.com/questions/25296479/how-to-get-overflowauto-behavior-with-html-table*/
+    display: block;
+    overflow: auto;
 }
 th,
 td {
